# MTCNN

./: README.md
detection/: CMakeLists.txt  MTCNN.cpp  MTCNN.h  main.cpp  main.cpp.new
model/: det1.prototxt  det2.prototxt  det3.prototxt  det4.prototxt
result/: Untitled Diagram.xml  record_gpu_1.txt  record_gpu_2.txt
result/FDDB_evaluation/: CMakeLists.txt
result/FDDB_evaluation/FDDB-folds/: ContROC.txt  ContROC_MTCNN.txt  ContROC_MTCNN_20.txt  DiscROC.txt  DiscROC_MTCNN.txt  DiscROC_MTCNN_20.txt  MTCNN.txt  MTCNN_20.txt  merge_txt.sh
result/FDDB_evaluation/FDDB-folds/CascadeCNN/: FDDB-fold-01-CascadeCNN.txt  FDDB-fold-02-CascadeCNN.txt  FDDB-fold-03-CascadeCNN.txt  FDDB-fold-04-CascadeCNN.txt  FDDB-fold-05-CascadeCNN.txt  FDDB-fold-06-CascadeCNN.txt  FDDB-fold-07-CascadeCNN.txt  FDDB-fold-08-CascadeCNN.txt  FDDB-fold-09-CascadeCNN.txt  FDDB-fold-10-CascadeCNN.txt
result/FDDB_evaluation/FDDB-folds/MTCNN/: FDDB-fold-01-MTCNN.txt  FDDB-fold-02-MTCNN.txt  FDDB-fold-03-MTCNN.txt  FDDB-fold-04-MTCNN.txt  FDDB-fold-05-MTCNN.txt  FDDB-fold-06-MTCNN.txt  FDDB-fold-07-MTCNN.txt  FDDB-fold-08-MTCNN.txt  FDDB-fold-09-MTCNN.txt  FDDB-fold-10-MTCNN.txt
result/FDDB_evaluation/FDDB-folds/MTCNN_20/: FDDB-fold-01-MTCNN.txt  FDDB-fold-02-MTCNN.txt  FDDB-fold-03-MTCNN.txt  FDDB-fold-04-MTCNN.txt  FDDB-fold-05-MTCNN.txt  FDDB-fold-06-MTCNN.txt  FDDB-fold-07-MTCNN.txt  FDDB-fold-08-MTCNN.txt  FDDB-fold-09-MTCNN.txt  FDDB-fold-10-MTCNN.txt
result/FDDB_evaluation/FDDB-folds/fileList/: FDDB-fold-01.txt  FDDB-fold-02.txt  FDDB-fold-03.txt  FDDB-fold-04.txt  FDDB-fold-05.txt  FDDB-fold-06.txt  FDDB-fold-07.txt  FDDB-fold-08.txt  FDDB-fold-09.txt  FDDB-fold-10.txt
result/FDDB_evaluation/compare/: CMakeLists.txt  compare.cpp  compare.h  main.cpp
result/FDDB_evaluation/evaluation/: CascadeCNN.txt  EllipsesSingleImage.cpp  Makefile  OpenCVUtils.hpp  RegionsSingleImage.cpp  ellipseList.txt  evaluate.cpp
result/FDDB_evaluation/face_detection/: CMakeLists.txt  GenSample.cpp  GenSample.h  ellipse_transform.cpp  ellipse_transform.h  fddb_detection.cpp  fddb_detection.h  main.cpp
script/: PRCurve.py  plot_ROC_curve.py  test_time.py
script/train_sh/: ONet_solver.prototxt  ONet_train.prototxt  ONet_train.sh  PNet_solver.prototxt  PNet_train.prototxt  PNet_train.sh  RNet_solver.prototxt  RNet_train.prototxt  RNet_train.sh  generate_hdf5.py  test_24.txt  train12c.sh  train12cal.sh  train24c.sh  train24cal.sh  train48c.sh  train48cal.sh  trainModels.sh  train_24.txt
script/train_sh/celeba_crop/: CMakeLists.txt  celeba_crop.cpp  celeba_crop.h  main.cpp
